# 3dog

./: CMakeLists.txt  README.md
shaders/: frag_shader.glsl  vert_shader.glsl
src/: camera.hpp  main.cpp  shader.cpp  shader.hpp  window.cpp  window.hpp
